test/sema/generics/generic_argument_count_mismatch.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> { x: number }

fn foo<T, U>(): unit {}

fn main(): unit {
  // CHECK: [[# @LINE + 1 ]]:4: error: expected '1' type argument but received '2'
  S@<number, number>{ x: 1 };

  // CHECK: [[# @LINE + 1 ]]:6: error: expected '2' type arguments but received '1'
  foo@<unit>();
}

// CHECK-NOT: {{.*error.*}}
